Fix Page scrolling issues, adjust width of buttons
Fixed these issues -

The additional content of the page is hidden.
The margin of the heading is way too high.
The text overflows outside the button.

--- a/css/home.css
+++ b/css/home.css
@@ -1,11 +1,12 @@
 /**{
     //background-color: #3C3C3C;
 }*/
+
 html,
 body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -18,7 +19,9 @@ h1{
   font-family:Montserrat;
   font-size: 4rem;
   text-align: center;
+  margin: 0.1em 0;
 }
+
 .nav{
   display: flex;
   flex-direction: row;
@@ -68,7 +71,7 @@ h1{
   background-color: whitesmoke;
   height:3rem;
   vertical-align: middle;
-  width: 30%
+  width: 33%;
 }
 
 .btn:hover{
